# pascal-ceri

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  Makefile.mk  README.md
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
.run/: all.run.xml  compil.run.xml  parser_header_gen.run.xml
cmake/: pascalConfig.cmake.in
compiler/: CMakeLists.txt
compiler/src/: main.cpp
examples/: Makefile  Makefile.mk  array.p  bool.p  case.p  for_step.p  function.p  if_else.p  procedure.p  test.p  vars.p  while.p
include/: parser.h  tokeniser.h  utils.h
parser/: CMakeLists.txt  generate-umbrella.cmake
parser/include/: function.h  operators.h  proposition.h  statement.h  type.h  variables.h
parser/src/: function.cpp  operators.cpp  proposition.cpp  statement.cpp  type.cpp  variables.cpp
tokeniser/: CMakeLists.txt  tokeniser.cpp  tokeniser.l
utils/: CMakeLists.txt  utils.cpp
